nested list spacing fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -60,6 +60,7 @@ li {
 
 ul, ol > ul, ol {
   padding-top:1em;
+  padding-bottom:0em;
 }
 
 blockquote {
